fix: action buttons are visible on very small screens

--- a/src/app/child-dev-project/progress-dashboard-widget/edit-progress-dashboard/edit-progress-dashboard.component.scss
+++ b/src/app/child-dev-project/progress-dashboard-widget/edit-progress-dashboard/edit-progress-dashboard.component.scss
@@ -32,3 +32,10 @@
   grid-area: target;
   min-width: 0;
 }
+
+.dialog-content {
+  @media (max-height: 800px) {
+    height: 40vh;
+  }
+}
+
